@@ -75,7 +75,7 @@ Client::Client(EQStreamInterface* ieqs)
 	0,	// size
 	0.7,	// runspeed
 	glm::vec4(),
-	0,	// light
+	0,	// light - verified for client innate_light value
 	0xFF,	// texture
 	0xFF,	// helmtexture
 	0,	// ac
@@ -302,6 +302,9 @@ Client::Client(EQStreamInterface* ieqs)
 	SavedRaidRestTimer = 0;
 
 	interrogateinv_flag = false;
+
+	active_light = innate_light;
+	spell_light = equip_light = NOT_USED;
 }
 
 Client::~Client() {
@@ -1795,6 +1798,9 @@ void Client::FillSpawnStruct(NewSpawn_Struct* ns, Mob* ForWho)
 	ns->spawn.runspeed		= (gmspeed == 0) ? runspeed : 3.125f;
 	ns->spawn.showhelm = m_pp.showhelm ? 1 : 0;
 
+	UpdateEquipLightValue();
+	UpdateActiveLightValue();
+	ns->spawn.light = active_light;
 }
 
 bool Client::GMHideMe(Client* client) {
