@@ -1,5 +1,13 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 01/24/2015 ==
+Uleat: Added equipment light source functionality to all mob derived classes (may still need tweaking...)
+Notes:
+	- In addition to equipment light sources, innate npc type light sources have already been activated
+	- Valid light source values are 0 thru 15 (values are bitmask checked and limited to 0x0F)
+	- Not all classes handle equipment light sources the same way due to their equipment/loot list configurations
+	- Spell (casting?) light sources may be implemented at some point..more information is needed
+
 == 01/22/2015 ==
 Akkadius: Massive Log System overhaul, see: http://wiki.eqemulator.org/p?Logging_System_Overhaul&frm=Main
 	
